--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <tbody></tbody>
         </table>
         <button id="deleteSelectedItems">Delete Selected</button>
-        <div class="pagination"></div>
+        <div id="pagination"></div>
     </div>
     <script src="script.js"></script>
 </body>
