--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main-container">
-        <input type="text" class="search-box" placeholder="Search by name, email or role">
+        <input type="text" id="search-box" placeholder="Search by name, email or role">
 
         <table id="userTable">
             <thead>
